--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
   "author": "Aarish Shah",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
-    "nodemon": "^3.0.3",
-    "validator": "^13.11.0"
+    "nodemon": "^3.0.3"
   }
 }
