--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Aarish Shah",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "mongodb": "^6.3.0",
